moderate rewrite of Debian guide after isolating installer bug

--- a/_posts/2024/2024-12-02-Cobbler-v3.3.7-Debian-Deployment-Guide.md
+++ b/_posts/2024/2024-12-02-Cobbler-v3.3.7-Debian-Deployment-Guide.md
@@ -5,7 +5,7 @@ author: Sus-Admin
 summary: Deploying Debian Bullseye and Bookworm (11 & 12) via PXE network boot.
 ---
 
-This guide assumes that you have a Fedora 34 server or workstation system configured to run Cobbler v3.3.7 similarly to the [Cobbler v3.3.6 Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html).
+This guide assumes that you have a Fedora 34 server or workstation system configured to run Cobbler v3.3.7 similarly to the [Cobbler v3.3.6 Beginner's guide](/blog/2024/Cobbler-v3.3.6-Beginners-Guide/).
 
 ## Table of Contents
 {:.no_toc}
@@ -21,19 +21,15 @@ Starting where the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-
 
 - Along the same lines as the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html) I prefer to locally host/mirror the base OS repo to alleviate public internet availability and bandwidth dependencies during network installations.
 
-- using the `cobbler check` CLI command, the output recommends installing the **debmirror** package in order to manage Debian deployments and repos with Cobbler. Instead, we will simply import the Debian source installation media (.iso file), similarly to the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html), and use that as the local repo mirror to install over the network.
+- This guide details 2 distinct approaches to deploying Debian with Cobbler
 
-    - This method is not the Cobbler official method, and Debian actually [recommends](https://www.debian.org/mirror/ftpmirror) using something like "apt-cacher-ng" or "squid proxy"
+    - The first method is *my* preferred approach since it's more similar to the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html) and generally has less requirements.
 
-    - The Main Debian repo for the latest release of Debian is about 100 GB at the time of writing, which is why this is *my* preferred method over using **debmirror**, as it only requires the data from a single Debian installer DVD (.iso file)
+        - This method does require a fairly complicated fix to a bug in the `debian-installer` source code, caused by the **unsigned** repo mirror (imported from the CD/DVD/ISO installation media) failing security verification (more info in the **Tips & Troubleshooting** section below).
 
-        - For completeness however, the **debmirror** method will be detailed towards the bottom of this guide, in the **Mirroring with debmirror** section.
+    - For completeness, the Cobbler-recommended method of using `debmirror` (seen in the output of the `cobbler check` CLI command) will be detailed towards the bottom of this guide, in the **Mirroring with debmirror** section.
 
-- This guide provides a workaround to an issue that is encountered when installing Debian 11 & 12 over the network from a **local/private repo** where the PXE client (`debian-installer`) does not trust the installation source *(Since Debian developers DO NOT sign the software/repos packaged into official CD/DVD/ISO releases: [https://wiki.debian.org/SecureApt](https://wiki.debian.org/SecureApt) )*.
-
-    - This appears to be a bug in the `debian-installer` (`d-i`); more info provided in the **Tips & Troubleshooting** section below.
-
-    - This issue should not arise when mirroring an official Debian mirror using the **debmirror** method, as recommended by Cobbler
+        - Debian actually [recommends](https://www.debian.org/mirror/ftpmirror) using something like "apt-cacher-ng" or "squid proxy"
 
 ## Cobbler Server Prep
 
@@ -42,6 +38,18 @@ Debian maintainers advise that network booting Debian is [not for novice users](
 That said, continue at your own risk.
 
 ### Dependencies
+
+While this section describes installing Debian from the local Cobbler server, the resulting system will use the public Debian mirrors for updates and installs going forward. Add a `cobbler repo` entry for those public Debian mirrors with your desired components to be referenced in the auto-install (these repos are only for metadata, they will not be mirrored or downloaded locally with the below settings)
+
+```shell
+cobbler repo add --name bookworm-latest --keep-updated false --mirror-locally false --breed apt --arch x86_64 --mirror "http://deb.debian.org/debian" --apt-components="main non-free non-free-firmware contrib" --apt-dists=bookworm
+cobbler repo add --name bookworm-updates --keep-updated false --mirror-locally false --breed apt --arch x86_64 --mirror "http://deb.debian.org/debian" --apt-components="main non-free non-free-firmware contrib" --apt-dists=bookworm-updates
+cobbler repo add --name bookworm-security --keep-updated false --mirror-locally false --breed apt --arch x86_64 --mirror "http://security.debian.org/debian-security" --apt-components="main non-free non-free-firmware contrib" --apt-dists=bookworm-security
+
+cobbler repo add --name bullseye-latest --keep-updated false --mirror-locally false --breed apt --arch x86_64 --mirror "http://deb.debian.org/debian" --apt-components="main non-free non-free-firmware contrib" --apt-dists=bullseye
+cobbler repo add --name bullseye-updates --keep-updated false --mirror-locally false --breed apt --arch x86_64 --mirror "http://deb.debian.org/debian" --apt-components="main non-free non-free-firmware contrib" --apt-dists=bullseye-updates
+cobbler repo add --name bullseye-security --keep-updated false --mirror-locally false --breed apt --arch x86_64 --mirror "http://security.debian.org/debian-security" --apt-components="main non-free non-free-firmware contrib" --apt-dists=bullseye-security
+```
 
 Download the latest releases of Debian Bookworm and Bullseye
 
@@ -65,24 +73,6 @@ wget -O ~/Downloads/Debian11.11-firmware.gz https://cdimage.debian.org/cdimage/f
 >
 > Newer releases of the netboot `initrd.gz` and firmware images will not be compatible with previous releases of Debian, as they use different kernel and module versions.
 
-Create a GPG key to sign the local Debian repo mirror, and then export the public key to the public HTTP share on the Cobbler server and restore the SELinux labels.
-
-```shell
-gpg --full-gen-key --batch <(echo "Key-Type: 1"; \
-                             echo "Key-Length: 4096"; \
-                             echo "Subkey-Type: 1"; \
-                             echo "Subkey-Length: 4096"; \
-                             echo "Expire-Date: 0"; \
-                             echo "Name-Real: cobbler"; \
-                             echo "Name-Email: cobbler@fedora.local"; \
-                             echo "%no-protection"; )
-
-gpg --output /var/www/cobbler/pub/cobbler.gpg.asc --armor --export cobbler
-restorecon -R /var/www/cobbler/pub
-```
-
-> for simplicity, this GPG key will not be password protected. This is against cyber-security best practices and should only be implemented in a test environment.
-
 ## Debian 12 Bookworm PXE Deployment
 
 mount the Debian 12 Bookworm installation media and import the distro into cobbler:
@@ -91,14 +81,6 @@ mount the Debian 12 Bookworm installation media and import the distro into cobbl
 [ -e /mnt/Debian ] || mkdir /mnt/Debian
 mount -t iso9660 -o loop,ro ~/Downloads/debian-12.8.0-amd64-DVD-1.iso /mnt/Debian
 cobbler import --name Debian12.8 --path /mnt/Debian
-```
-
-Navigate to the imported distro mirror and sign the repo:
-
-```shell
-cd /var/www/cobbler/distro_mirror/Debian12.8/dists/bookworm
-gpg -u cobbler -bao Release.gpg Release
-gpg -u cobbler --clear-sign --output InRelease Release
 ```
 
 Concatenate the two `initrd.gz` images in the following order, then configure the new Cobbler Distro to use the combined image:
@@ -114,64 +96,50 @@ Create a new "preseed" (autoinstall) template from the sample included with Cobb
 ```shell
 cp /var/lib/cobbler/templates/sample.seed /var/lib/cobbler/templates/bookworm-workaround.seed
 sed -i 's,# d-i debian-installer/allow_unauthenticated boolean true,d-i debian-installer/allow_unauthenticated boolean true,' /var/lib/cobbler/templates/bookworm-workaround.seed
-sed -i 's,# d-i apt-setup/local0/key string http://local.server/key,d-i apt-setup/local0/repository string http://$http_server$install_source_directory\nd-i apt-setup/local0/key string http://$http_server/cblr/pub/cobbler.gpg.asc,' /var/lib/cobbler/templates/bookworm-workaround.seed
 ```
-
-> This is where the bug mentioned in the **Caveats** section above is introduced. The `apt-setup/local0/key` preseed value *should* allow us to provide the `debian-installer` with a GPG key to validate the installation source, but the installation always fails without the **workaround** detailed below.
->
-> When the **workaround** is implemented, the installation completes successfully and the resulting system's installation log always has an entry like `Downloading local repository key failed`.
-> 
-> Still, confugre it to retrieve the key over HTTP anyway, just in case.
 
 Use the standard `preseed_early_default` Cobbler Script to create a new Cobbler Script which will implement the ***workaround*** to be run on the PXE client to circumvent the bug mentioned in the **Caveats** section above:
 
 ```shell
 grep -v '# End preseed_early_default' /var/lib/cobbler/scripts/preseed_early_default | tee /var/lib/cobbler/scripts/preseed_early_workaround
 
-echo 'while true; do
-	[ -d /target/etc/apt/trusted.gpg.d ] && cd /target/etc/apt/trusted.gpg.d && fetch-url http://$http_server/cblr/pub/cobbler.gpg.asc cobbler.gpg.asc && exit;
-	echo nope;
+echo 'while true; do 
+	[ -f /usr/lib/base-installer/library.sh ] && sed -i '\''s/APT::Get::AllowUnauthenticated "true";/APT::Get::AllowUnauthenticated "true";\nAcquire::AllowInsecureRepositories "true";/'\'' /usr/lib/base-installer/library.sh && break;
 	sleep 1;
-done 2> /dev/null 1> /dev/null &
-# End preseed_early_default' | tee -a /var/lib/cobbler/scripts/preseed_early_workaround
+done 2> /dev/null 1> /dev/null &' | tee -a /var/lib/cobbler/scripts/preseed_early_workaround
 ```
 
-Create another preseed script (from the standard `preseed_late_default` Cobbler Script) to run in the post-installation stage which will grant sudo privileges to the "debian" user (created below) and reconfigure the installed system to use Debian's official APT sources instead of the local Cobbler server.
+Create a new Cobbler snippet from `late_apt_repo_config` to *not* use the Cobbler server as an `apt` mirror *post-installation*.
 
 ```shell
-grep -v '# End preseed_late_default' /var/lib/cobbler/scripts/preseed_late_default | tee /var/lib/cobbler/scripts/preseed_late_bookworm
-
-echo "sed -i 's,#PermitRootLogin prohibit-password,PermitRootLogin no,' /etc/ssh/sshd_config
-usermod -aG sudo debian
-sed -i 's,^,#,' /etc/apt/sources.list
-echo 'deb http://deb.debian.org/debian bookworm main non-free-firmware non-free contrib' >> /etc/apt/sources.list
-echo 'deb-src http://deb.debian.org/debian bookworm main non-free-firmware non-free contrib' >> /etc/apt/sources.list
-echo 'deb http://security.debian.org/debian-security bookworm-security main non-free-firmware non-free contrib' >> /etc/apt/sources.list
-echo 'deb-src http://security.debian.org/debian-security bookworm-security main non-free-firmware non-free contrib' >> /etc/apt/sources.list
-echo 'deb http://deb.debian.org/debian bookworm-updates main non-free-firmware non-free contrib' >> /etc/apt/sources.list
-echo 'deb-src http://deb.debian.org/debian bookworm-updates main non-free-firmware non-free contrib' >> /etc/apt/sources.list
-# End preseed_late_default" | tee -a /var/lib/cobbler/scripts/preseed_late_bookworm
+grep -v 'deb http://$http_server/cblr/links/$distro_name $os_version main' /var/lib/cobbler/snippets/late_apt_repo_config | tee /var/lib/cobbler/snippets/late_apt_repo_config-no_cobbler
 ```
 
-Modify the new preseed (autoinstall) template to install desired packages only, setup an additional user "debian", set the workaround script created above to run in the "early" installation stage, and the "preseed_late" script to run in the late stage, and more aggressively force the installation regardless of any existing installations.
+Create another preseed script from the standard `preseed_late_default` which will use the above `late_apt_repo_config-no_cobbler` snippet.
 
 ```shell
-sed -i 's,ntp ssh wget,wget curl openssh-server sudo vim\npopularity-contest popularity-contest/participate boolean false,' /var/lib/cobbler/templates/bookworm-workaround.seed
+sed 's,late_apt_repo_config,late_apt_repo_config-no_cobbler' /var/lib/cobbler/scripts/preseed_late_default | tee /var/lib/cobbler/scripts/preseed_late_no-cobbler
+```
+
+Modify the new preseed (autoinstall) template to deselect any services *(which are not included with the installation ISO/DVD)*, install desired packages only, setup an additional user "debian" with `sudo` privileges, set the workaround script created above to run in the *early* installation stage and the new "preseed_late" script to run in the *late* stage, and more aggressively force the installation regardless of any existing installations.
+
+```shell
 sed -i 's,# d-i apt-setup/services-select multiselect security,d-i apt-setup/services-select multiselect,' /var/lib/cobbler/templates/bookworm-workaround.seed
+sed -i 's,ntp ssh wget,wget curl openssh-server sudo vim\npopularity-contest popularity-contest/participate boolean false,' /var/lib/cobbler/templates/bookworm-workaround.seed
 sed -i 's,d-i partman-auto/method string lvm,d-i partman-efi/non_efi_system boolean true\nd-i partman-auto/method string lvm,' /var/lib/cobbler/templates/bookworm-workaround.seed
 sed -i 's,d-i grub-installer/bootdev string default,d-i grub-installer/bootdev string default\nd-i grub-installer/with_other_os boolean true\nd-i grub-installer/force-efi-extra-removable boolean false\nd-i grub-installer/enable_os_prober_otheros_yes boolean false\nd-i grub-installer/enable_os_prober_otheros_no boolean true,' /var/lib/cobbler/templates/bookworm-workaround.seed
-sed -i 's,d-i passwd/make-user boolean false,d-i passwd/make-user boolean true\nd-i passwd/user-fullname string Debian Admin\nd-i passwd/username string debian\nd-i passwd/user-password-crypted password $default_password_crypted,' /var/lib/cobbler/templates/bookworm-workaround.seed
+sed -i 's,d-i passwd/make-user boolean false,d-i passwd/make-user boolean true\nd-i passwd/user-fullname string Debian Admin\nd-i passwd/username string debian\nd-i passwd/user-password-crypted password $default_password_crypted\nd-i passwd/user-default-groups string sudo,' /var/lib/cobbler/templates/bookworm-workaround.seed
 sed -i 's,script=preseed_early_default,script=preseed_early_workaround,' /var/lib/cobbler/templates/bookworm-workaround.seed
-sed -i 's,script=preseed_late_default,script=preseed_late_bookworm,' /var/lib/cobbler/templates/bookworm-workaround.seed
+sed -i 's,script=preseed_late_default,script=preseed_late_no-cobbler,' /var/lib/cobbler/templates/bookworm-workaround.seed
 ```
 
-Configure the Cobbler Profile to use the new autoinstall (preseed) template:
+Configure the Cobbler Profile to use the new autoinstall (preseed) template and assign the appropriate `cobbler repo` mirrors defined above:
 
 ```shell
-cobbler profile edit --name Debian12.8-x86_64 --autoinstall 'bookworm-workaround.seed'
+cobbler profile edit --name Debian12.8-x86_64 --autoinstall 'bookworm-workaround.seed' --repos "bookworm-latest bookworm-security bookworm-updates"
 ```
 
-Finally, create a new Cobbler System to PXE boot and automatically install Debian 12 Bookworm, replacing the *"aa:bb:cc:dd:ee:ff"* with the MAC address of your PXE client, being sure not to use a duplicate MAC or IP addresse of any other Cobbler System, then sync up Cobbler.
+Finally, create a new Cobbler System to PXE boot and automatically install Debian 12 Bookworm, replacing the *"aa:bb:cc:dd:ee:ff"* with the MAC address of your PXE client, being sure not to use a duplicate MAC or IP address of any other Cobbler System, then sync up Cobbler.
 
 ```shell
 cobbler system add --name "Debian12.8" --profile Debian12.8-x86_64 --hostname "debian12-8" --mac-address "aa:bb:cc:dd:ee:ff" --netboot-enabled true --ip-address "10.0.0.12" --netmask "255.255.255.0" --gateway "10.0.0.1" --name-servers "10.0.0.1 1.1.1.1 8.8.8.8"
@@ -189,16 +157,11 @@ Take similar steps as above, with the inclusion of the netboot "firmware" image 
 mount -t iso9660 -o loop,ro ~/Downloads/debian-11.11.0-amd64-DVD-1.iso /mnt/Debian
 cobbler import --name=Debian11.11 --path=/mnt/Debian
 
-cd /var/www/cobbler/distro_mirror/Debian11.11/dists/bullseye
-gpg -u cobbler -bao Release.gpg Release
-gpg -u cobbler --clear-sign --output InRelease Release
-
 cat /var/www/cobbler/distro_mirror/Debian11.11/install.amd/initrd.gz ~/Downloads/Debian11.11-netboot.gz ~/Downloads/Debian11.11-firmware.gz > /var/www/cobbler/pub/Debian11.11-netboot.gz
 cobbler distro edit --name Debian11.11-x86_64 --initrd "/var/www/cobbler/pub/Debian11.11-netboot.gz"
 
-sed 's,bookworm,bullseye,' /var/lib/cobbler/scripts/preseed_late_bookworm > /var/lib/cobbler/scripts/preseed_late_bullseye
-grep -v "os_prober" /var/lib/cobbler/templates/bookworm-workaround.seed | sed 's,preseed_late_bookworm,preseed_late_bullseye,' > /var/lib/cobbler/templates/bullseye-workaround.seed
-cobbler profile edit --name Debian11.11-x86_64 --autoinstall bullseye-workaround.seed
+grep -v "os_prober" /var/lib/cobbler/templates/bookworm-workaround.seed > /var/lib/cobbler/templates/bullseye-workaround.seed
+cobbler profile edit --name Debian11.11-x86_64 --autoinstall bullseye-workaround.seed --repos "bullseye-latest bullseye-security bullseye-updates"
 
 cobbler system add --name Debian11.11 --profile Debian11.11-x86_64 --mac-address "aa:bb:cc:dd:ee:ff" --netboot-enabled true
 
@@ -213,7 +176,7 @@ This guide will only provide the steps to mirror the LATEST release of Debian *(
 
 similarly to the DVD/ISO method above, both the **netboot** and **DVD/ISO** `initrd.gz` images are still required in the same concatenated manner to properly install over the network, but they must both be downloaded separately of the `debmirror` process.
 
-Since the official Debian repo will be mirrored, the source will be fully valid with trusted signatures, meaning the autoinstall (preseed) file for the PXE client will not need the APT security settings required in the DVD/ISO source method.
+Since the official Debian repo will be mirrored, the source will be fully valid with trusted signatures, meaning the autoinstall (preseed) file for the PXE client will not need the **workaround** portion.
 
 Cobbler supports managing repos/sources via the debmirror command natively, which means the `debmirror` package only needs to be installed and configured, then mirroring can be accomplished/managed through Cobbler CLI commands.
 
@@ -252,12 +215,12 @@ cobbler repo add --name Debian-latest --keep-updated true --mirror-locally true 
 cobbler reposync
 ```
 
+### PXE deploy via local debmirror repo
+
 Configure a new preseed file for installation via the trusted, signed Debian repo:
 
 ```shell
 cp /var/lib/cobbler/templates/bookworm-workaround.seed /var/lib/cobbler/templates/bookworm-latest.seed
-sed -i 's,d-i apt-setup/local0/repository,#d-i apt-setup/local0/repository,' /var/lib/cobbler/templates/bookworm-latest.seed
-sed -i 's,d-i apt-setup/local0/key,#d-i apt-setup/local0/key,' /var/lib/cobbler/templates/bookworm-latest.seed
 sed -i 's,d-i debian-installer/allow_unauthenticated,#d-i debian-installer/allow_unauthenticated,' /var/lib/cobbler/templates/bookworm-latest.seed
 sed -i 's,script=preseed_early_workaround,script=preseed_early_default,' /var/lib/cobbler/templates/bookworm-latest.seed
 ```
@@ -273,11 +236,11 @@ cat ~/Downloads/debian-stable-initrd.gz ~/Downloads/debian-stable-netboot-initrd
 cp ~/Downloads/debian-stable-vmlinuz /var/www/cobbler/pub/Debian12.8-netboot/vmlinuz
 ```
 
-Add a Cobbler Distro and Profile for the new Debian repo, and the usual HTTP link:
+Add a Cobbler Distro and Profile (including the metadata-only `cobbler repo` mirrors created in the **Prerequisites** section above) for the new Debian repo, and the usual HTTP link:
 
 ```shell
 cobbler distro add --name Debian-latest --arch x86_64 --autoinstall-meta 'tree'='http://@@http_server@@/cblr/links/Debian-latest' --breed debian --os-version bookworm --initrd "/var/www/cobbler/pub/Debian12.8-netboot/initrd.gz" --kernel "/var/www/cobbler/pub/Debian12.8-netboot/vmlinuz"
-cobbler profile add --name Debian-latest --distro Debian-latest --autoinstall bookworm-latest.seed
+cobbler profile add --name Debian-latest --distro Debian-latest --autoinstall bookworm-latest.seed --repos "bookworm-latest bookworm-security bookworm-updates"
 ln -s /var/www/cobbler/repo_mirror/Debian-latest /var/www/cobbler/links/Debian-latest
 cobbler sync
 ```
@@ -295,36 +258,17 @@ Now the **PXE Client** should be able to boot from a generic/random MAC address 
 
 1. The [Cobbler 3.3.6 Beginner's Guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html) **Tips & Troubleshooting** section contains some basic recommendations and limitations of Cobbler which will not be repeated here.
 
-1. The `debian-installer` issue mentioned in the **Caveats** section above is primarily marked by a fatal error during the installation process and the log entry `GPG error` in `/var/log/syslog` on the installer system, or, if the workaround script was used, you can install the `debconf-utils` package on the resulting system and use the command `debconf-get-selections --installer | grep "Downloading"` for more info on the error.
+1. Going the route of importing the DVD ISO file for debian PXE deployments will leave those PXE clients with less available packages to install during OS installation compared to a full mirror, but I prefer to keep the OS deployments minimal anyway.
 
-    - The error prevents the installation from proceeding using the configured repo mirror, but the `debian-installer` remains running; press **ALT+F2** or **ALT+F3** on the PXE client keyboard to access a privileged shell to conduct some troubleshooting.
+1. The issue mentioned in the **Caveats** section above is due to the `base-installer` [source code](https://salsa.debian.org/installer-team/base-installer/-/blob/1.213/library.sh?ref_type=tags) neglecting to add the `Acquire::AllowInsecureRepositories "true";` line in to the `00AllowUnauthenticated` file on the target system (created depending on the value of preseed optoin `debian-installer/allow_unauthenticated`) as mentioned in the [apt-secure manpage](https://manpages.debian.org/bookworm/apt/apt-secure.8.en.html).
 
-    - The issue stems from the below section of the preseed file, retrieved drectly from Debian's official [stable](https://www.debian.org/releases/stable/example-preseed.txt) and [bookworm](https://www.debian.org/releases/bookworm/example-preseed.txt) example preseed files.
-
-{% capture file %}```shell
-{% include example-preseed-excerpt.txt path="_includes/example-preseed-excerpt.txt" %}```{% endcapture %}
-{% assign lines = file | newline_to_br | strip_newlines | split: "<br />" %}
-{% for line in lines %}{{ line | prepend: "      " }}
-{% endfor %}
-
-    - As seen in the procedures above, `allow_unauthenticated` is set to true, which appears to only permit the installation to START when an untrusted repo mirror is found, but the mirror will be checked again before beginning the `apt-setup` phase, which `allow_unauthenticated` will not override.
-
-        - This means that the `debian-installer` also requires the local APT mirror to be defined using the `d-i apt-setup/local0/repository` & `d-i apt-setup/local0/key` preseed options in order for the PXE client to retrieve the public GPG key for the repo mirror and use it to validate the mirror, which seems to be configured properly through the preseed from Cobbler, verified with the following commands on the `debian-installer` system (and obviously can be done, since the workaround provided in this guide does essentially the same thing):
-
-            ```shell
-            debconf-get apt-setup/local0/repository
-            debconf-get apt-setup/local0/key
-            less /var/lib/preseed/log
-            cat /var/log/syslog | grep "GPG error"
-            cat /var/lib/cdebconf/templates.dat | grep apt-setup
-            cat /var/lib/cdebconf/questions.dat | grep apt-setup
-            ```
-
-        - Alternatively, the preseed comments note that you may provide the GPG key inline in the preseed file as a base64-encoded string with the format `d-i apt-setup/local0/key string base64://<base64-encoded_key>`, however I was not able to get this working either.
-
-    - The snippet from Debian's official preseed sample above mentions "see generators/60local in apt-setup's source" and looking at some of that [source code](https://salsa.debian.org/installer-team/apt-setup/-/blob/master/generators/60local?ref_type=heads), I tried to model the workaround script as closely to the source code as possible, which is why `fetch-url` is used to download the GPG key, instead of `wget` or `curl`.
+    - The installation will fail on a "cannot find a suitable kernel package" error.
 
     - This error consistenly occurs on Debian 11 & 12 installations.
+
+    - A bug has been filed with the Debian Bug Tracking System for this.
+
+    - Debian developers do NOT sign the software/repos packaged into official CD/DVD/ISO releases: [https://wiki.debian.org/SecureApt](https://wiki.debian.org/SecureApt)
 
 1. References
 
@@ -381,4 +325,3 @@ Now the **PXE Client** should be able to boot from a generic/random MAC address 
             - [https://debian-handbook.info/browse/wheezy/sect.package-authentication.html](https://debian-handbook.info/browse/wheezy/sect.package-authentication.html)
         - [https://serverfault.com/questions/337278/debian-how-can-i-securely-get-debian-archive-keyring-so-that-i-can-do-an-apt-g](https://serverfault.com/questions/337278/debian-how-can-i-securely-get-debian-archive-keyring-so-that-i-can-do-an-apt-g)
         - [https://ubuntuforums.org/archive/index.php/t-2217665.html](https://ubuntuforums.org/archive/index.php/t-2217665.html)
-
